--- a/VRChat/47/1013247.html
+++ b/VRChat/47/1013247.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9WUm8YtECSinuVUaoFdYrQ0EgOxaYa5eaEpoK6BZnzs="></script>
+    "styxOsPKbAat0qmA1vUY3dzDDCo1+Y29/DOanWntap8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジャック・オー・ランタン","description":"ライトの仕込まれたハロウィン使用のジャック・オー・ランタンです。\n小さな召喚コウモリくんが必死に羽ばたき、ランタンを運んでくれます。\n\nライトの設定値はVRChat流行りのダンジョン「Blonix Dungeon」で使われている松明の設定値です。\n※こちら（https://twitter.com/Luche_BS/status/1037940826284875776）のツイートを参考にさせていただきました。\n\nソロ攻略や、今後きっと増えていくであろうそういったワールドのお供にもお使いいただけます。\n\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ\n・各種説明書（画像説明ありのPDF形式）\n　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n\n\n\n～詳細～\n・三角面数：計1206\n　かぼちゃ：876\n　コウモリ：330\n・ダイナミックボーン対応\n・マテリアル：1\n・まんまるしぇーだー適用済み\n　※必要に応じて最新版のシェーダーをご使用ください。\n・ライト設定済み（設定値はBlonix Dungeonの松明と同じです）\n・アニメーションあり：コウモリの羽ばたき・ロウソクの火の揺れ\n・prefabやシーンデータ込み\n","url":"https://booth.pm/ja/items/1013247","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1013247/cff10ad8-3de2-4c8b-a35c-736984045a18_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9WUm8YtECSinuVUaoFdYrQ0EgOxaYa5eaEpoK6BZnzs="></script>
+    nonce="styxOsPKbAat0qmA1vUY3dzDDCo1+Y29/DOanWntap8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -432,9 +432,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
