--- a/VRChat/21/1013021.html
+++ b/VRChat/21/1013021.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FXQuNTZyN0vV2FwMpF0JpMyOMmNqVgVh5k2q1vzYpgk="></script>
+    "NH99xQ97j19McmZ51mThAZwQgYNHhIR80ctBbS1VAyY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】","description":"本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。","url":"https://booth.pm/ja/items/1013021","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/add1ff68-a715-4ce2-adf2-1f16be0144eb_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FXQuNTZyN0vV2FwMpF0JpMyOMmNqVgVh5k2q1vzYpgk="></script>
+    nonce="NH99xQ97j19McmZ51mThAZwQgYNHhIR80ctBbS1VAyY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      170
+                                      171
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -205,7 +205,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      170
+                                      171
                                     </div>
                                   </div></a>
                                 </div>
@@ -549,9 +549,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
