--- a/VRChat/28/1012628.html
+++ b/VRChat/28/1012628.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Bdoscqf+UVa8s0GMcy00BvNo7JQ6W3Y8kYfFJCjFicU="></script>
+    "CuihqMrKm+LjdBRiP5k1F2zLxFf46ZUE3jAmoa4A6So="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　ウィンチェスターM1873ソードオフ","description":"□ウィンチェスター社製レバーアクションライフル、M1873のソードオフした3Dモデルです。\n4270△ポリゴン。\nレバーアクション(スピンコック)のアニメーション付属。\n2018/10/13\n非Legacy環境にも対応済み。\n\n\n□内容\n・M1873.fbx　本体\n\n・M1873.unitypackage　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/guns/M1873フォルダに作成されます。\nVRchat用アバターに常時組み込みなどを行う場合は内部の部品のメッシュを幾つか非表示にすると多少ポリゴン数が減らせます。\n\nまた、prefabにはレバーアクション用のアニメーションが追加されています。動かさない場合などはAnimationコンポーネントを削除して下さい。\n\nアニメーションサンプル\nhttps://twitter.com/mabo_to_fu/status/1041967313384169472\n\n\n□更新について\n\nfbxファイルには変更がありません。再度unitypackageのみをインポートして下さい。\n\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/10/13：アニメーションの仕様を非Legacyに変更しました。\n\n\n2018/09/25：レバーアクションのアニメーションを追加しました。","url":"https://booth.pm/ja/items/1012628","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1012628/d8ae544e-b8f6-4272-a076-bc4432752177_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bdoscqf+UVa8s0GMcy00BvNo7JQ6W3Y8kYfFJCjFicU="></script>
+    nonce="CuihqMrKm+LjdBRiP5k1F2zLxFf46ZUE3jAmoa4A6So="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
