--- a/VRChat/62/1011462.html
+++ b/VRChat/62/1011462.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Edb76zXFh6+nObBdZlLnJjA+uci55OH6S49pjkTE804="></script>
+    "WmcmDmLpYNusHJv/x9SVkqpOPZ5mpZbJeAf7aI/HCg0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け３Dモデル】ファンリィ（中国名：幻日）withパンダ","description":"オリジナル３Dモデル「ファンリィ（中国名：幻日）withパンダ」の紹介文です。","url":"https://booth.pm/ja/items/1011462","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/096bf3c8-3f47-4b73-bffd-d3493c1d45ef/i/1011462/9f30a968-ea4b-4fd2-b7ff-4168cf5c9e4f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Edb76zXFh6+nObBdZlLnJjA+uci55OH6S49pjkTE804="></script>
+    nonce="WmcmDmLpYNusHJv/x9SVkqpOPZ5mpZbJeAf7aI/HCg0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -516,9 +516,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
