updated at: 2023-07-31 21:25, 【VRChat向け】懐中電灯＋看板セット - 黒金ニエロ鉄工所 - BOOTH

--- a/VRChat/45/997945.html
+++ b/VRChat/45/997945.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6s2XR6/C7HDpc6j99b6r9wOPES3MBuQkYIi5RgJqjlg="></script>
+    "bS+IcQX875h24cSVXItd0BR5FRUYSfXZjGAan8tRHlw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】懐中電灯＋看板セット","description":"■商品概要\nVRChatでの仕様を想定した懐中電灯と看板です。\n懐中電灯は暗いワールドの探索に役立ちます。\n看板は自由に絵を変えることができます。\nunitypackageを同梱しているので簡単に導入することが出来ます。\n懐中電灯 △180ポリゴン\n看板 △76ポリゴン\n\n■使い方\n・懐中電灯を実際に光らせる\nHierarchyに懐中電灯のモデルを入れて、入れたモデルをHierarchy上で右クリックします。\n下方にあるLight→Spotlightを選択すると懐中電灯の中にライトが現れます。\n※また、懐中電灯にはエミッションテクスチャも同梱しているので、アニメーションオーバーライドを用いてマテリアルを変更すれば懐中電灯から光が出たときにライト部分も発光するように設定することも出来ます。\n・看板のテクスチャ変更\n表面、裏面とマテリアルが分かれており、テクスチャは1920*1080なので16:9の画像であれば何でも使えます。\nUnlitにしているのでマテリアルから好きなテクスチャへ変更してください。\n\n■免責事項\n本データの利用によって生じたいかなる損害について、当方は一切の責任を負いません。\n\n■禁止事項\n・本データの再配布、転載を禁止します。\n・本データの作者を偽る行為を禁止します。\n・本データを用いた迷惑行為、他者を侮辱する行為\n・宗教的、政治的な用途での利用\n\n■許可事項\n・改変\n・本データを用いたアバターやワールドをVRChat上にアップロードする行為\n・本モデルを動画、静止画などの形で公共の場にアップロードすること\n\n上記規約は告知なく改変される可能性があります。\n\n■更新履歴\n2018/9/1: v1.0\n\n■連絡先\n黒金ニエロ\nbooth https://niello.booth.pm/\nホームページ https://niellochannel.wixsite.com/ojousama\nTwitter @Niello_virtual","url":"https://booth.pm/ja/items/997945","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8285a99a-4ad9-4431-9d71-56e82927bcf2/i/997945/0d838810-44c0-4d67-b2ef-36b03c1d0148_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6s2XR6/C7HDpc6j99b6r9wOPES3MBuQkYIi5RgJqjlg="></script>
+    nonce="bS+IcQX875h24cSVXItd0BR5FRUYSfXZjGAan8tRHlw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -391,9 +391,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
