updated at: 2023-07-31 21:26, 衣だけエビフライ - ネギトロ丼専門店 - BOOTH

--- a/VRChat/61/997761.html
+++ b/VRChat/61/997761.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "AUrOwm+k1lhhJDQGUSsV1lcvaSsO0KbVWDCBwvilgik="></script>
+    "98shjA/NHomU9js9pDeEnrvLESP5r6yZp9I733+86HA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"衣だけエビフライ","description":"小物として利用できるエビフライです。中身はありません。\n頭に乗せたり咥えたり、着込んだりしてご利用ください。\n\nポリゴン数(▲)の異なるモデルを3パターン用意しております。\n（▲368，▲606，▲1114）\n\nFBX形式の3DモデルファイルとUnitypackageファイルが同梱されています。\n\n※サンプル画像の質感を再現するにはノーマルマップ、MatCapの設定が必要です。\n\nデータそのままを利用できる再配布、再販以外は自由にしてください。\n\n2018/09/11  オマケとしてボーン付きエビフライ＋シームレスフライテクスチャを追加しました。","url":"https://booth.pm/ja/items/997761","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e1630f9c-2274-466a-8108-d3bc890d0975/i/997761/041c43d0-051b-47d5-9b54-ee93187b5951_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AUrOwm+k1lhhJDQGUSsV1lcvaSsO0KbVWDCBwvilgik="></script>
+    nonce="98shjA/NHomU9js9pDeEnrvLESP5r6yZp9I733+86HA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -379,9 +379,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
