updated at: 2023-07-31 21:31, NormalEmitMaterial - こおりみずのおもちゃ箱 - BOOTH

--- a/VRChat/63/992263.html
+++ b/VRChat/63/992263.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PPLAcz7u5ZwRr/xWvXtYQtvOITdZkZdOOgqgGh51LrY="></script>
+    "FdofrUnXFeYI5gG8aZg0Zb0Z7BgBQqOpyf/uhPFPwA0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NormalEmitMaterial","description":"VRChat向け法線に従って発光する半透明マテリアルです。\n\nポリゴン数が多いメッシュに対して効果を発揮しますので、お手持ちの武器などに適用するといい感じになるかも？\n\n色の変更や光り方が簡単に調整できるようになっていますー\n\n【内容物】\n・unitypackage\n(マテリアル・シェーダ・説明書・サンプルシーンが含まれます）\n\n改変、商用利用、アバターやワールドへの同梱可\n再配布不可\n","url":"https://booth.pm/ja/items/992263","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/992263/992d61b0-8e64-451d-a6c6-f6e74d4c4e10_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PPLAcz7u5ZwRr/xWvXtYQtvOITdZkZdOOgqgGh51LrY="></script>
+    nonce="FdofrUnXFeYI5gG8aZg0Zb0Z7BgBQqOpyf/uhPFPwA0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -372,9 +372,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
