updated at: 2023-07-31 21:34, [アバター]潜水士っぽいモデル(SHA-21-0105_sensui) - Sharono屋 - BOOTH

--- a/VRChat/66/987666.html
+++ b/VRChat/66/987666.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Oxu0zdVHVEslcAZQWOpKwH6d533UjNqFKUqiY95Tk7c="></script>
+    "sYbc+6TJ6ebenIKN33wjmsra6muJA0SjQfWdWXFAYdk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[アバター]潜水士っぽいモデル(SHA-21-0105_sensui)","description":"愛嬌のある潜水士風のアバターモデルです。\n\nゆるーい規約で準備していますので、\nいろいろ遊んでみてもらえると嬉しいです。\n\n☆★☆2021年大幅にアップデートされました☆★☆\n1.全部作り直しました。\n2.Quest対応版も同梱されました。\n3.頭が生えました。(abatar3.0メニューでON/OFF)\n4.規約は緩いままです。\n－－－－－\n\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage　、fbx、png\n　ポリゴン数：5885\n　シェーダー：PC版(UTS2)、Quest版(ToonLit)\n　テクスチャ：2色\n　その他：VRChatSDK 3.0セットアップ済prefab同梱\n\n使い方\n　VRChatで利用することを前提にセットアップしております。\n　Unityで事前に以下をインポートください。\n　・VRChatSDK3　\n　・(PC版のみ)UTS2.0\n　・(PC版のみ任意)Dynamicbone\n　”SHA-21-0105_sensui.unitypackage”をUnityにインポートしてください。\n　SyaronoYa \u003e SHA-21-0105_sensui \u003e prefab　内にあるprefabファイル(※)をHierarchyにドロップしてください。\n　　※PC版とQuest版2色ずつprefabがありますので用途に応じて\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルの一部あるいはすべてを組み込んだモデルの販売や他者への配布は禁止とします。\n　※VRChatへのアップロード、ペデスタル登録については許可します。\n\n・非常に緩い規約としております。楽しい用途で利用いただければ幸いです。\n・本モデルデータを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。　\n\n　不明点ございましたらお問い合わせください。\n\n\n2018/09/27\nウエイト修正しました。(頭のウエイトがzipのボーンにのってしまっていました。)\n2021/02/20\n大幅にアップデートされました。","url":"https://booth.pm/ja/items/987666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/987666/f4882cc4-5d25-4eba-a11a-9fedaa23adcb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Oxu0zdVHVEslcAZQWOpKwH6d533UjNqFKUqiY95Tk7c="></script>
+    nonce="sYbc+6TJ6ebenIKN33wjmsra6muJA0SjQfWdWXFAYdk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -429,9 +429,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
