updated at: 2023-07-31 21:43, VRChat用モデル　熱断刀 - degarasi_shop(仮) - BOOTH

--- a/VRChat/79/974579.html
+++ b/VRChat/79/974579.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8wZVMxZWjVeYhR/Pxr1AIYnHHAm5T3K2Af6rp7QtLF8="></script>
+    "09oLU5GVT5jOEU+8ptEfSJNa0+6rIOP/58NHOjl681I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用モデル　熱断刀","description":"VRChat用の小物　熱断刀です\nUnityPackageが入っていますのでそちらをお使いください\n\nVRChatでの使用におけるモデルの改変、ギミックの追加などはご自由にどうぞ\nまた、本モデルを使用した画像や動画などのアップロードも\nご自由にどうぞ\n\n本商品および改変した本商品の二次配布は一切を禁止します\n\n※熱断刀という名前なのに刀身が赤くないのは赤熱するギミックを実装できていないからです\n今後実装したものを再配布する可能性があります\n\n不具合や扱いにくいと感じた部分があれば遠慮なくメッセージ下さい\n修正対応や、今後の参考にします","url":"https://booth.pm/ja/items/974579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/89744857-5e96-49d2-b69b-0167803f90b2/i/974579/f0db4c76-1370-4a71-bee7-cd5e46361c51_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8wZVMxZWjVeYhR/Pxr1AIYnHHAm5T3K2Af6rp7QtLF8="></script>
+    nonce="09oLU5GVT5jOEU+8ptEfSJNa0+6rIOP/58NHOjl681I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -441,9 +441,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
