updated at: 2023-07-31 21:43, 【VRC想定】抱き枕(北島デザイン・改変用デザイン)【アバター・アクセサリ両用】 - ショッピング北島 - BOOTH

--- a/VRChat/57/933357.html
+++ b/VRChat/57/933357.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/BEy6wp8593NY1HLPxfg7E/jpasdwN1zdqRMDxtkHVI="></script>
+    "R0UGnLLHeTOo/KOFMWJx+Dz+mkw0ymKQLyEp0B6iwfg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】抱き枕(北島デザイン・改変用デザイン)【アバター・アクセサリ両用】","description":"--2018/8/30更新しました。(Updated!)--\nReadMe!!!に、\n・ノーマルマップに関する記述\n・よくあるかもしれない質問\nを追加しました。\n！！！今までUnityパッケージとして配布していたものがUnityシーンファイルでした！！大変ご迷惑をおかけしました。！！！\n今回修正しました。ファイル名は同じですので、そちらからインポートしてください。\n----\n抱き枕(北島デザイン・改変用デザイン)\n\n北島(製作者のキャラクター)のデザインの抱き枕の3Dモデル(FBX)と、カスタムしやすいカバー用画像のセットです。\nまとめたものをUnityPackageにして同梱しています。\n3Dモデルは△480ポリゴンです。\n\n以下の文章はフォルダ内のRead Me!!!とほぼ同内容です。\n\nzipファイルとなっておりますので、ダウンロード後は各自で解凍をしてください。","url":"https://booth.pm/ja/items/933357","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/13868100-3507-4382-85a7-a21c6138b840/i/933357/8acfcc37-8a50-462b-be29-9fc78b3983c9_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/BEy6wp8593NY1HLPxfg7E/jpasdwN1zdqRMDxtkHVI="></script>
+    nonce="R0UGnLLHeTOo/KOFMWJx+Dz+mkw0ymKQLyEp0B6iwfg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -619,9 +619,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
