updated at: 2023-07-31 21:45, [3Dモデル]獣手袋 - Ｋ参鬼ショップ - BOOTH

--- a/VRChat/09/972209.html
+++ b/VRChat/09/972209.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ewcmgrrG2AfjXxMgl0s1XmpgyhgONsshzYwz2IHHpDE="></script>
+    "iqkc5QN22xIEqTi+W1vxA+fDGO76D142gOxyR0+6rmU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]獣手袋","description":"◆獣手袋\n\n\n◆概要\n3Dモデル及びアバター等の手に取り付ける獣手袋です。\n\n\n◆利用規約\n\n　※当モデルデータを利用された方は下記利用規約すべての内容に同意したものとみなされます。\n\n　・当モデルデータの著作権は「Ｋ参鬼」が所有します。\n　・当モデルデータの使用時に著作権表示の必要はありません。\n　・当モデルデータは営利目的での利用が可能です。\n\n◆禁止事項\n\n　・改変の有無にかかわらず、第三者が利用可能な状態での再配布、アップロード。\n　・本モデルの自作発言\n　・他人を不快にさせる目的での使用\n　・公序良俗に反する行為。\n\n◆同梱データ\n\n　・獣手袋.fbx\n　・獣手袋(ボーン付)\n　・獣手袋テクスチャ.png\n　・獣手袋UV.png\n　・Readme.txt\n\n◆免責事項\n\n　・モデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません\n\n◆連絡先\n\n　twitter : @ksanki\n\n\n規約 ver.1.0\n(規約テンプレート作成、仔鹿様 twitter : @_new_338)","url":"https://booth.pm/ja/items/972209","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a17f37a6-c78d-44b0-bc94-21a5a6410ec5/i/972209/1354ab23-55b2-4a39-b111-26789ac545e5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ewcmgrrG2AfjXxMgl0s1XmpgyhgONsshzYwz2IHHpDE="></script>
+    nonce="iqkc5QN22xIEqTi+W1vxA+fDGO76D142gOxyR0+6rmU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -398,9 +398,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
