updated at: 2023-07-31 21:49, カブトムシ - Vignettia Works(B-Rabbits Factory) - BOOTH

--- a/VRChat/23/962723.html
+++ b/VRChat/23/962723.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ws4Y9RWIJxGjsYNa+8hyWKnq8XbAB6YEAurdackYlI0="></script>
+    "y9A1DZacfvwQCsM83MK6EJD51mNUQKZExNMP6AUzlsI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カブトムシ","description":"■モデル概要\nカブトムシのポリゴンモデルです。\n\nキャラに付けたり、大量にしてみたり、\nふと気が付くとそこにカブトムシ…。\n\nご自由にお使いいただければと思います。\n\nボーンは入っていません。\nカブトムシ下面はポリゴン削減のため極力簡略化しています。\n\n■同梱データ\n・FBX\n・画像データ(PSD、PNG)\n\n■データ詳細\nポリゴン数 555\n\n■利用規約について\n・未改変、未改造、での再配布は禁止。\n\n・営利目的での使用可能。\n\n■免責事項 \n・本データの利用において、何らかのトラブル、\n　損失が生じたとしても当方は一切の責任を負いません。\n\n・利用規約についての内容は予告なく変更する場合があります。\n\n■モデルサンプル(ニコニ立体)\n　このカブトムシのモデルはカナというキャラクターで\n　帽子の後ろに付いているのと同じ物です。\n\n　よろしければご覧ください。\n　http://3d.nicovideo.jp/works/td39076\n\n■バージョン履歴\n2018/08/12-1.0","url":"https://booth.pm/ja/items/962723","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ddadc202-dbe9-4f85-83b4-97cd420b1442/i/962723/440c9a0b-c808-4fca-a15c-30c3f41d8531_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ws4Y9RWIJxGjsYNa+8hyWKnq8XbAB6YEAurdackYlI0="></script>
+    nonce="y9A1DZacfvwQCsM83MK6EJD51mNUQKZExNMP6AUzlsI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -454,9 +454,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
